--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 	</head>
 	<body>
+		<center>Google Authentication here.</center>
 		<div ng-controller="myCtrl">
 			<div class="g-signin2" data-onsuccess="onSignIn"></div>
 		</div>
 		<script>
 			function onSignIn(googleUser) {
-  var profile = googleUser.getBasicProfile();
-  console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-  console.log('Name: ' + profile.getName());
-  console.log('Image URL: ' + profile.getImageUrl());
-  console.log('Email: ' + profile.getEmail());
-}
+				  var profile = googleUser.getBasicProfile();
+				  console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+				  console.log('Name: ' + profile.getName());
+				  console.log('Image URL: ' + profile.getImageUrl());
+				  console.log('Email: ' + profile.getEmail());
+				}
 		</script>
 	</body>
 </html>
