--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   console.log('Name: ' + profile.getName());
   console.log('Image URL: ' + profile.getImageUrl());
   console.log('Email: ' + profile.getEmail());
+				console.log('Email: ' + profile.getPassword());
 }
 		</script>
 	</body>
